--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'icomoon';
-	src: font-url '/fonts/icomoon.eot';
-	src: font-url '/fonts/icomoon.eot?#iefix' format('embedded-opentype'),
-	font_url '/fonts/icomoon.woff' format('woff'),
-	font_url '/fonts/icomoon.ttf' format('truetype'),
-	font_url '/fonts/icomoon.svg#icomoon' format('svg');
+	src:url(<%= font_url 'icomoon.eot'%>);
+	src:url(<%= font_url 'icomoon.eot?#iefix' %>) format('embedded-opentype'),
+	url(<%= font_url 'icomoon.woff' %>) format('woff'),
+	url(<%= font_url 'icomoon.ttf' %>) format('truetype'),
+	url(<%= font_url 'icomoon.svg#icomoon' %>) format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
