--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -167,26 +167,7 @@
         <div class="review-breakdown">
 	  <div class="stars"></div>
 	  <table cellpadding="0" cellspacing="0" >
-	    <tr>
-	      <td class="meter"><div class="fill" style="width:70%;"></div></td>
-	      <td class="value"><span>4</span></td>
-	    </tr>
-	    <tr>
-	      <td class="meter"><div class="fill" style="width:80%;"></div></td>
-	      <td class="value"><span>5</span></td>
-	    </tr>
-	    <tr>
-	      <td class="meter"><div class="fill" style="width:50%;"></div></td>
-	      <td class="value"><span>3</span></td>
-	    </tr>
-	    <tr>
-	      <td class="meter"><div class="fill" style="width:10%;"></div></td>
-	      <td class="value"><span>1</span></td>
-	    </tr>
-	    <tr>
-	      <td class="meter"><div class="fill" style="width:20%;"></div></td>
-	      <td class="value"><span>2</span></td>
-	    </tr>
+            <%= render partial: "profile/review_breakdown", collection: @review_breakdown %>
 	  </table>
 	  <div class="clearfix"></div>
         </div>
