Add support for handling flash messages

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,4 +13,5 @@
     </div>
     <div class="clearfix"></div>    
   </header>  
+  <%= render :partial => "layouts/flash" if flash[:notice] %>
 </div>
