--- a/app/assets/stylesheets/main.css.erb
+++ b/app/assets/stylesheets/main.css.erb
@@ -168,7 +168,7 @@ nav a:hover {
 
 .header-container .profile-link.logged-in { padding: 0.2em 0 0.2em 1%; position: relative; min-width: 150px; }
 .header-container .profile-link.logged-in a { display: block; width: 100%; padding-right: 20%;  }
-.header-container .profile-link.logged-in a b { background: url('../img/sprites.svg') 0 -686px no-repeat; display: inline-block; width: 20px; height: 12px; position: relative; top: 2px; left: 10px; }
+.header-container .profile-link.logged-in a b { background: url(<%= asset_path 'sprites.svg' %>) 0 -686px no-repeat; display: inline-block; width: 20px; height: 12px; position: relative; top: 2px; left: 10px; }
 .header-container .profile-link.logged-in .profile-image { width: 35px; height: 35px; float: left; margin: 8px 8% 8px 0; border: 1px solid #444; box-shadow: inset 0px 1px 3px rgba(0,0,0,0.3); }
 .header-container .profile-link.logged-in p { padding-top: 0.8em; float: left; margin: 0;  }
 .header-container .profile-link.logged-in ul.menu { display: none; position: absolute; background: rgba(240,240,240,0.92); list-style: none; margin: 0; padding: 0; min-width: 200px; right: 10px; top:59px; box-shadow: 0px 2px 10px rgba(0,0,0,0.3); }
