--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,11 +6,26 @@
         <li><a href="#how-works">How it works</a></li>
       </ul>
     </nav>
+    <% if current_user %>
+    <div class="profile-link logged-in">
+      <a href="#" class="menu-toggle">
+        <div class="profile-image" style="background:url(<%=image_url 'content/prof-thumb1.jpg' %>) no-repeat; background-size: contain;"></div>
+        <p>Hi, <%= current_user.first_name %><b></b></p>
+      </a>
+      <ul class="menu">
+        <li><%= link_to "View your profile", profile_url(current_user) %></li>
+        <li><%= link_to "Edit your profile", profile_private_url %></li>
+        <li><%= link_to "Change settings", settings_url %></li>
+        <li><%= link_to "Logout", logout_url %></li>
+      </ul>
+    </div>
+    <% else %>
     <div class="profile-link">
       <%= link_to :Login, login_url%>
       <b>or</b> 
       <%= link_to :Join, register_url, class: :join %>
     </div>
+    <% end %>
     <div class="clearfix"></div>    
   </header>  
   <%= render :partial => "layouts/flash" if flash[:notice] %>
