--- a/app/views/profile/_review.html.erb
+++ b/app/views/profile/_review.html.erb
@@ -1,6 +1,6 @@
 <li>
   <div class="col col1">
-    <div class="profile-image" style="background:url(<%= reviewer_avatar(review, :thumb) %>) no-repeat; background-size: contain;" ></div>
+    <div class="profile-image" style="background:url(<%= reviewer_avatar(review, :comment_thumb) %>) no-repeat; background-size: contain;" ></div>
     <a href="#" class="username"><%= review.reviewer_name %></a>
   </div>
   
