--- a/app/views/profile/private.html.erb
+++ b/app/views/profile/private.html.erb
@@ -3,7 +3,7 @@
   <div class="profile-top-holder">
     <div class="inner">
       
-      <div class="profile-image" style="background:url(<%= @user.avatar.url(:detail) %>) no-repeat; background-size: contain;" ></div>
+      <div class="profile-image" style="background:url(<%= @user.avatar.url(:profile_detail) %>) no-repeat; background-size: contain;" ></div>
       <div class="col">
       	<h1><%= @user.fullname %></h1>
       	<h2>Private Investigator [TODO]</h2>
