updated links in footer and homepage layout

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,8 +1,7 @@
 <div class="footer-container">
   <footer class="wrapper">
     <ul class="col1">
-      <li><a href="#">How it works</a></li>
-      <li><a href="#">FAQ</a></li>
+      <li><a href="#how-works">How it works</a></li>
       <li><a href="#">List your business</a></li>
     </ul>
     <ul class="col2">
