--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -69,7 +69,7 @@
       <article class="featured">
         <header>
           <h2>Featured professionals in New York</h2>
-          <a href="/register1.html">List your business on Propeek</a>
+          <a href="/register">List your business on Propeek</a>
           <div class="clearfix"></div>
         </header>
         <section>
@@ -128,8 +128,7 @@
   <div class="footer-container">
     <footer class="wrapper">
       <ul class="col1">
-        <li><a href="#">How it works</a></li>
-        <li><a href="#">FAQ</a></li>
+        <li><a href="#how-works">How it works</a></li>
         <li><a href="#">List your business</a></li>
       </ul>
       <ul class="col2">
