--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
     <div class="profile-link">
       <%= link_to :Login, login_url%>
       <b>or</b> 
-      <%= link_to :Join, register_url, class: :join %>
+      <%= link_to :"Join For Free", register_url, class: :join %>
     </div>
     <% end %>
     <div class="clearfix"></div>    
