--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -105,7 +105,7 @@
 	    </div>
 	  </div>
         </section>
-        <a class="list-biz-mobile" href="/register1.html">List your business on Propeek</a>
+        <a class="list-biz-mobile" href="/register">List your business on Propeek</a>
       </article>
 
     </div> <!-- #main -->
@@ -129,7 +129,7 @@
     <footer class="wrapper">
       <ul class="col1">
         <li><a href="#how-works">How it works</a></li>
-        <li><a href="#">List your business</a></li>
+        <li><a href="/register">List your business</a></li>
       </ul>
       <ul class="col2">
         <li><a href="#">Terms of use</a></li>
